make TARKIN JSON array output deterministic